# COMP30040ThirdYearProject

./: .gitignore  CMakeLists.txt  Final report.docx
project/: .clang-format  CMakeLists.txt  clause_form.cpp  integration-test.sh  main.cpp  reductor.h  verifier.h
project/samples/: answer10.ans  answer14.ans  answer3.ans  input1.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input2.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt  input25.txt  input26.txt  input27.txt  input28.txt  input29.txt  input3.txt  input30.txt  input31.txt  input32.txt  input33.txt  input34.txt  input35.txt  input36.txt  input37.txt  input38.txt  input39.txt  input4.txt  input40.txt  input41.txt  (+11 more)
project/src/lib/: CMakeLists.txt  ad_hoc_templated.cpp  ad_hoc_templated.h  basic_theorem_prover.cpp  basic_theorem_prover.h  clause.cpp  clause.h  clause_form.cpp  clause_form.h  depth_ordered_theorem_prover.cpp  depth_ordered_theorem_prover.h  dual_hash_ascii.cpp  dual_hash_ascii.h  entity.cpp  entity.h  evaluator.h  literal.cpp  literal.h  modifier.cpp  modifier.h  operators.cpp  operators.h  parse_tree.cpp  parse_tree.h  parser.h  random_factory.cpp  random_factory.h  reducer.cpp  reducer.h  simplified_clause_form.cpp  simplified_clause_form.h  simplified_literal.cpp  simplified_literal.h  term.cpp  term.h  theorem_prover.cpp  theorem_prover.h  tokenizer.cpp  tokenizer.h  tokens.cpp  (+7 more)
resources/: Propositional.ppt  README.txt  good-test-numbers-for-TPTP.txt
src/: evaluator.h  parser.h
(+56 files in other folders)
